# RAG_overLawDocs

./: .gitignore  GEMINI.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/agent/: chat.py
backend/src/api/: chat.py
backend/src/lancedb/documents.lance/_transactions/: 0-45d7b3b9-d3b3-455b-9758-463d5ce88e36.txn
backend/src/lancedb/documents.lance/_versions/: 1.manifest
backend/src/lancedb/documents.lance/data/: 006fec36-01af-42f5-a053-ad1ca156f3e4.lance
backend/src/prompts/: agent_prompt.txt
backend/src/scripts/: document_processing.py  logging.py
frontend/: Dockerfile  index.html  nginx.conf  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ChatInterface.tsx  DisclaimerBanner.tsx  LandingPage.tsx
frontend/src/pages/: Index.tsx  NotFound.tsx
